[gd_scene load_steps=2 format=3 uid="uid://bsebevtfokfkx"]

[ext_resource type="Script" uid="uid://o3rvmy38y75k" path="res://scripts/ui/dialog_system.gd" id="1_yyed4"]

[node name="DialogSystem" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_yyed4")

[node name="DialogBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_right = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogMargin" type="MarginContainer" parent="DialogBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="DialogContainer" type="HBoxContainer" parent="DialogBackground/DialogMargin"]
layout_mode = 2

[node name="DialogText" type="RichTextLabel" parent="DialogBackground/DialogMargin/DialogContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonIndicateImage" type="TextureRect" parent="DialogBackground/DialogMargin/DialogContainer"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
size_flags_vertical = 8
expand_mode = 1
stretch_mode = 4

[node name="CharacterPortraitContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="CharacterPortrait" type="TextureRect" parent="CharacterPortraitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5
